# Minecraft

./: LICENSE  README.md
DataPacks/XulbuX_WorldsParkourMap/: .spyglassrc.json  README.txt  pack.mcmeta
DataPacks/XulbuXs_Very-Dangerous_Datapack/: pack.mcmeta
DataPacks/XulbuXs_Worlds-Parkour-Map_Datapack/: README.txt  pack.mcmeta
DatapackUpdater/: ___chat___.mcfunction  __main__.mcfunction  all_raceitems.mcfunction  datapack_updater.py  get_items_by_id.mcfunction  update-datapack.py
Modrinth/xulbux.vanilla-plus/: README.md  xulbux.vanilla-plus_1.0.0.mrpack
Modrinth/xulbux.vanilla-plus/packs/: xulbux.vanilla-plus 1.0.0.mrpack  (+3 more)
ResourcePacks/Better Tamed Wolfs/: pack.mcmeta
ResourcePacks/Redstone Redux/: pack.mcmeta
ResourcePacks/Redstone Tweaks  - XulbuX Version/: credits.txt  pack.mcmeta
ResourcePacks/TNPistons/: pack.mcmeta
ResourcePacks/Worlds Parkour Map/: pack.mcmeta
ResourcePacks/§9SPECIAL TEXTURES §4- Parkour Maps/: pack.mcmeta
ResourcePacks/§9TEXTURES §4- Worlds Parkour Map/: pack.mcmeta
ResourcePacks/§eBaloo in Minecraft§8 - Tamed Wolfs are Baloos/: pack.mcmeta
ResourcePacks/§eNice Dogs in Minecraft§8 - Tamed Wolfs look Better/: pack.mcmeta
sign-design/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.ts
sign-design/public/: index.html
sign-design/src/: App.vue  app.ts  main.ts
sign-design/src-tauri/: Cargo.toml  tauri.conf.json
sign-design/src-tauri/icons/: icon.icns
sign-design/src-tauri/src/: main.rs
(+485 files in other folders)
