[package]
name = "sign-design"
version = "1.0.0"
description = "Sign Design • An app to generate nicely styled Minecraft signs."
authors = ["xulbux"]
edition = "2021"

[lib]
name = "sign_design_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
